name:                aws-ec2
version:             0.1.0.0
license-file:        LICENSE
author:              Vladimir Kirillov
maintainer:          vlad.ki@zalora.com
copyright:           2014 Zalora
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Aws.Ec2
    , Aws.Elb
    , Aws.CloudWatch
    , Aws.CloudWatch.Core
    , Aws.CloudWatch.Types
    , Aws.CloudWatch.Commands.PutMetricData
    , Aws.Query
    , Aws.Query.Types
    , Aws.Canonical
  build-depends:
      base >=4 && <5
    , template-haskell
    , containers
    , mtl
    , text
    , bytestring
    , base16-bytestring
    , base64-bytestring
    , blaze-builder
    , time

    , aeson
    , unordered-containers
    , vector
    , scientific

    , resourcet
    , byteable
    , cryptohash
    , http-types
    , http-conduit
    , conduit-extra
    , xml-conduit
    , aws

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable put-metric
  main-is: put-metric.hs
  build-depends:
      base
    , bytestring
    , text
    , optparse-applicative
    , aws
    , aws-ec2

  hs-source-dirs:      cmd
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
