name:                aws-ec2
version:             0.1
synopsis:            AWS EC2/VPC, ELB and CloudWatch client library for Haskell
license-file:        LICENSE
license:             BSD3
author:              Vladimir Kirillov
maintainer:          vlad.ki@zalora.com
copyright:           See contributors list in README and LICENSE file
build-type:          Simple
cabal-version:       >=1.10
category:            Network, Web, AWS, Cloud, Distributed Computing
homepage:            https://github.com/zalora/aws-ec2
description:         AWS client library with focus on infrastructure services like EC2 (with VPC), ELB and CloudWatch, extension to <https://github.com/aristidb/aws>.

source-repository this
  type: git
  location: https://github.com/zalora/aws-ec2.git
  tag: 0.1

source-repository head
  type: git
  location: https://github.com/zalora/aws-ec2.git

library
  exposed-modules:
      Aws.Ec2
    , Aws.Elb
    , Aws.CloudWatch
    , Aws.CloudWatch.Core
    , Aws.CloudWatch.Types
    , Aws.CloudWatch.Commands.PutMetricData
    , Aws.Query
    , Aws.Query.Types
    , Aws.Canonical
  build-depends:
      base >=4 && <5
    , template-haskell
    , containers
    , mtl
    , text
    , bytestring
    , base16-bytestring
    , base64-bytestring
    , blaze-builder
    , time

    , aeson
    , unordered-containers
    , vector
    , scientific

    , resourcet
    , byteable
    , cryptohash
    , http-types
    , http-conduit
    , conduit-extra
    , xml-conduit
    , aws

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable put-metric
  main-is: put-metric.hs
  build-depends:
      base
    , bytestring
    , text
    , optparse-applicative
    , aws
    , aws-ec2

  hs-source-dirs:      cmd
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
